tg-5930 [BE] Modificar flujos de creación y edición de prepagas y sus planes

--- a/back-end/hospital-api/src/main/resources/messages_en.properties
+++ b/back-end/hospital-api/src/main/resources/messages_en.properties
@@ -173,3 +173,4 @@ care-line.clinical-specialty-exists = This clinical specialty is already asociat
 medical-coverage.rnos-duplicated = This Rnos is already associated with other medical coverage
 medical-coverage.cuit-duplicated = The CUIT is already associated with other medical coverage
 medical-coverage.invalid-cuit =  The CUIT must be numeric
+medical-coverage.plan-exists =  This plan is already associated to medical coverage
