--- a/back-end/hospital-api/src/main/resources/messages_es.properties
+++ b/back-end/hospital-api/src/main/resources/messages_es.properties
@@ -193,3 +193,4 @@ care-line.clinical-specialty-exists = La especialidad clínica ya se encuentra a
 medical-coverage.rnos-duplicated =  El Rnos ya se encuentra asociado a otra cobertura médica
 medical-coverage.cuit-duplicated = El CUIT ya se encuentra asociado a otra cobertura médica
 medical-coverage.invalid-cuit =  El CUIT debe ser numérico
+medical-coverage.plan-exists =  El plan ya se encuentra asociado a la cobertura médica
