tg-5909 [BE] Elimina campo sexo de la busqueda de HC y tablas de pacientes

--- a/front-end/apps/projects/hospital/src/assets/i18n/pacientes/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/pacientes/es-AR.json
@@ -64,7 +64,7 @@
                 },
 				"IDENTIFY_TYPE_LABEL": "Tipo",
 				"IDENTIFY_NUMBER_LABEL": "Nro. de documento",
-				"GENDER_LABEL": "Sexo",
+				"GENDER_LABEL": "Sexo documento",
 				"SELECT_REASON_LABEL": "Seleccione motivo",
 				"COMMENTS_LABEL": "Comentarios"
             }
