tg-5031 Se agregaron validaciones en los input

--- a/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
@@ -369,7 +369,7 @@
 					"ADMINISTRATION_TIME": "Tiempo de administración",
 					"ADMINISTRATION_TIME_DEFAULT_OPTION": "Habitual",
 					"OBSERVATIONS": "Observaciones",
-					"INTERVAL_HOURS_REQUIRED": "Ingrese cantidad de horas",
+					"INTERVAL_HOURS_REQUIRED": "Ingrese cantidad de horas válidas",
 					"ADMINISTRATION_TIME_DAYS_REQUIRED": "Ingrese cantidad de días"
 				},
 				"new_prescription_dialog": {
