tg-5998. [FE] Validar máximo 2 cifras decimales en el nuevo valor "Hemoglobina glicosilada"

--- a/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
@@ -69,7 +69,8 @@
 					"HEAD_CIRCUNFERENCE_RANGE": "Perímetro cefálico debe ser entre 0 y 100 cm",
 					"BLOOD_GLUCOSE_RANGE": "Glucemia debe ser entre 1 y 500 (mg/dl)",
 					"GLYCOSYLATED_HEMOGLOBIN_RANGE": "Hemoglobina glicosilada debe ser entre 1 y 20 (%)",
-					"CARDIOVASCULAR_RISK_RANGE": "Riesgo cardiovascular debe ser entre 1 y 100 (%)"
+					"CARDIOVASCULAR_RISK_RANGE": "Riesgo cardiovascular debe ser entre 1 y 100 (%)",
+					"MAX_TWO_DECIMAL_DIGITS": "Hemoglobina glicosilada debe tener máximo 2 cifras decimales"
 				},
 				"motivo": {
 					"TITLE": "Motivo de consulta",
