tg-5954 [BE] Agregar campos a los objetos involucrados en los servicios de Ambulatoria

--- a/back-end/hospital-api/src/main/resources/messages_en.properties
+++ b/back-end/hospital-api/src/main/resources/messages_en.properties
@@ -77,6 +77,7 @@ diagnosis.repeated=Repeated diagnosis
 diagnosis.anthropometric.invalid=Anthropometric data invalid
 diagnosis.anthropometric.height.invalid=Height must have an integer value between 0 and 1000 cm
 diagnosis.anthropometric.weight.invalid=Weight must have a value between 0 and 1000 kg
+diagnosis.anthropometric.headCircumference.invalid=Head circumference must have a value between 1 and 100 cm
 procedures.repeated=Repeated procedures
 health.history.condition.repeated=Repeated records
 anamnesis.exist=Internment has an anamnesis yet
