--- a/back-end/hospital-api/src/main/resources/messages_es.properties
+++ b/back-end/hospital-api/src/main/resources/messages_es.properties
@@ -81,6 +81,7 @@ diagnosis.repeated=Diagnósticos repetidos
 diagnosis.anthropometric.invalid=Datos antropométricos no válidos
 diagnosis.anthropometric.height.invalid=Talla debe tener un valor entero entre 0 y 1000 cm
 diagnosis.anthropometric.weight.invalid=Peso debe tener un valor entre 0 y 1000 kg
+diagnosis.anthropometric.headCircumference.invalid=Perímetro cefálico debe tener un valor entre 1 y 100 cm
 procedures.repeated=Procedimientos repetidos
 health.history.condition.repeated= Antecedentes repetidos
 anamnesis.exist=La internación ya contiene una anamnesis
