tg-6000 Agrega insignia del usuario

--- a/front-end/apps/projects/hospital/src/assets/i18n/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/es-AR.json
@@ -14,7 +14,8 @@
 			"PACIENTES": "Pacientes",
 			"PERFIL": "Mi cuenta",
 			"TURNOS": "Gestión de turnos",
-			"REPORTES": "Reportes"
+			"REPORTES": "Reportes",
+			"LOGOUT": "Cerrar sesión"
 		}
 	},
 	"buttons": {
@@ -78,6 +79,9 @@
 	},
 	"messages": {
 		"NO_DATA": "No hay información para mostrar"
+	},
+	"profile": {
+		"PICTURE": "Foto de perfil"
 	},
 	"version": {
 		"SHORTENED": "V. {{versionNumber}}"
