tg-6104. [FE] Agregar "Grupo y factor sanguíneo" al header de la página

--- a/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
@@ -22,7 +22,9 @@
 			"card": {
 				"buttons": {
 					"NUEVA_CONSULTA": "Nueva consulta"
-				}
+				},
+				"GROUP_AND_FACTOR": "Grupo y factor",
+				"SANGUINEOUS": "sanguíneo"
 			},
 			"new-nursing-consultation": {
 				"TITLE": "Nueva consulta de enfermería",
