tg-6129. [BE] Agregar descripción de las propiedades

--- a/back-end/hospital-api/src/main/resources/messages_es.properties
+++ b/back-end/hospital-api/src/main/resources/messages_es.properties
@@ -195,3 +195,144 @@ medical-coverage.rnos-duplicated =  El Rnos ya se encuentra asociado a otra cobe
 medical-coverage.cuit-duplicated = El CUIT ya se encuentra asociado a otra cobertura médica
 medical-coverage.invalid-cuit =  El CUIT debe ser numérico
 medical-coverage.plan-exists =  El plan ya se encuentra asociado a la cobertura médica
+
+
+####### Propiedades del sistema #######
+admin.mail=Nombre de usuario del usuario Administrador.
+admin.password=Contraseña del usuario Administradora.
+internment.document.directory=Directorio donde se almacenan documentos clínicos y fotos de pacientes.
+spring.profiles.active=Define el ambiente en el que se ejecuta el sistema. Los valores posibles son: dev, qa, prod.
+token.secret=La clave secreta de generación de token, usada para validar los tokens recibidos desde los request.
+token.expiration=Determina el tiempo de expiración del token (s=segundos, m=minutos, h=horas, d=días).
+token.header=Define el nombre del header donde se espera recibir el JWT.
+password.reset.token.expiration=Determina el tiempo de expiración del token de reset password (s=segundos, m=minutos, h=horas, d=días).
+spring.datasource.hikari.maximumPoolSize=Tamaño del pool de conexiones abiertas que estan en la escucha de request.
+spring.jpa.database-platform=Nombre de la clase que representa el dialecto del motor de base de datos a utilizar. Valor por defecto org.postgresql.Driver
+spring.mail.host=Dirección del servidor de mails.
+spring.mail.port=Puerto del servidor de mails.
+spring.mail.username=Usuario del servidor de mails.
+spring.mail.password=Password del servidor de mails.
+spring.mail.properties.mail.transport.protocol=Protocolo del servidor de mails.
+spring.mail.properties.mail.smtp.auth=Define si requiere autenticación.
+spring.mail.properties.mail.smtp.starttls.required=Habilita el uso del comando STARTTLS (si el servidor lo soporta) para cambiar la conexión a protegida por TLS.
+spring.mail.properties.mail.smtp.starttls.enable=Habilita el uso del comando STARTTLS (si el servidor lo soporta) para cambiar la conexión a protegida por TLS.
+app.mail.activate=Activa el uso de mail.
+mail.from=Define el mail de origin.
+
+management.endpoint.metrics.enabled=Habilita métricas del servidor.
+management.endpoints.web.exposure.include=Define que endpoints de la librería actuator se pueden consultar.
+management.endpoints.jmx.exposure.include=Define que endpoints de la librería actuator se pueden consultar.
+management.endpoint.prometheus.enabled=Define si está habilitado los endpoints de prometheus (para monitoreo de la aplicación).
+management.metrics.export.prometheus.enabled=Define si está habilitado los endpoints de prometheus (para monitoreo de la aplicación).
+management.health.mail.enabled=Habilita información sobre el estado de tu sistema.
+management.endpoint.health.show-details=Habilita información detallada sobre el estado de tu sistema.
+management.info.git.mode=Incorpora información de git relacionada al sistema.
+management.endpoint.loggers.enabled=Activa los endpoints de loggers.
+
+actuator.configuration.whitelist=Define la lista de ips habilitada a acceder a los endpoints de la librería actuator.
+actuator.configuration.authenticated=Define si se requiere autenticación para acceder a los endpoints de la librería actuator.
+
+google.recaptcha.enable=Flag para habilitar / deshabilitar la funcionalidad de recaptcha en la aplicación.
+google.recaptcha.secret.key=Clave secreta correspondiente al de la consola administrativa.
+google.recaptcha.site.key=Clave publica correspondiente al de la consola administrativa.
+google.recaptcha.validator.url=Url de google para validar el recaptcha. No debería cambiar.
+
+habilitar.boton.consulta=Propiedad de configuración de aplicación para des/habilitar el botón Nueva consulta.
+ws.bus.url.base=URL productiva del de interoperabilidad utilizada al solicitar historia clínica de pacientes federados en otros dominios.
+
+ws.renaper.enabled=Determina si se utiliza la integración con Renaper (se necesita completar la configuración).
+ws.renaper.nombre=Nombre que provee Renaper para cada dominio que utilice la integración.
+ws.renaper.clave=Clave que provee Renaper para cada dominio que utilice la integración.
+
+ws.federar.enabled=Determina si se utiliza la integración con Federar (se necesita completar la configuración).
+ws.federar.url.base=URL de autenticación del Federador.
+ws.federar.sisaCode=Código SISA para el dominio.
+ws.federar.claims.iss=URI del dominio (registrada previamente ante la DNGISS).
+ws.federar.claims.sub=Nombre del dominio.
+ws.federar.claims.aud=URL de autenticación usada en la generación del token JWT **[NO MODIFICAR]**.
+ws.federar.claims.name=Apellido y Nombres del Usuario que accede (no es necesario que hayan sido registrados ante la DNGISS).
+ws.federar.claims.role=Especialidad del Usuario (no es necesario que hayan sido registrados ante la DNGISS).
+ws.federar.claims.ident=Un identificador para el usuario (no es necesario que hayan sido registrados ante la DNGISS).
+ws.federar.auth.signKey=A cada dominio se le asignará una palabra secreta única y cifrada por la DNGISS.
+
+ws.snowstorm.url.base=URL base donde se van a consumir los servicios de Snowstorm.
+ws.snowstorm.appKey=Key de la aplicación utilizada para autorización de request.
+ws.snowstorm.appId=Id de la aplicación utilizada para autorización de request.
+ws.snowstorm.params.preferredOrAcceptableIn=Parámetros para consulta a servicio Conceptos que indica que la descripción debe ser preferida o aceptable en al menos uno de estos parametros.
+ws.snowstorm.params.limit=Parámetro para consulta a servicio Conceptos que indica límite de resultados.
+ws.snowstorm.params.termActive=Parámetro para consulta a servicio Conceptos que indica si el termino a buscar debe estar activo.
+ws.snowstorm.auth.language=Header que indica el lenguaje de los resultados.
+ws.snowstorm.url.concepts=URL relativa para consumir el servicio de Conceptos a buscar.
+
+snomed-semantics.diagnosis.ecl=Ecl para búsqueda de diagnósticos.
+snomed-semantics.bloodType.ecl=Ecl para búsqueda de tipos de sangre.
+snomed-semantics.personalRecord.ecl=Ecl para búsqueda de antecedentes personales.
+snomed-semantics.familyRecord.ecl=Ecl para búsqueda de antecedentes familiares.
+snomed-semantics.allergy.ecl=Ecl para búsqueda de alergias.
+snomed-semantics.hospitalizationReason.ecl=Ecl para búsqueda de motivos de internación.
+snomed-semantics.vaccine.ecl=Ecl para búsqueda de vacunas.
+snomed-semantics.medicine.ecl=Ecl para búsqueda de medicamentos.
+snomed-semantics.procedureGroup.ecl=Ecl para búsqueda de procedimientos.
+snomed-semantics.consultationReason.ecl=Ecl para búsqueda de motivos de consulta.
+
+ws.nomivac.synchronization.url.base=URL del dominio donde se sincroniza las vacunas.
+ws.nomivac.synchronization.cron.config=Cron que determina la periodicidad con la que se envía los datos a nomivac.
+app.feature.HABILITAR_BUS_INTEROPERABILIDAD=Define si se va a realizar una comunicación con el bus de interoperabilidad.
+ws.nomivac.rest-client.config.trust-invalid-certificate=Propiedad para ignorar certificados https vencidos.
+
+ws.sisa.snvs.enabled=Determina sí ésta activa la funcionalidad para hacer reportes epidmediológicos.
+ws.sisa.snvs.url.base=Determina el dominio donde se encuentran el servicio de reporte epidmediológico.
+ws.sisa.snvs.appId.value=Id de identificación para consulta de servicio.
+ws.sisa.snvs.appKey.value=Key para la consulta del servicio.
+ws.sisa.snvs.environment=Define el set de datos a utilizar para el evento, grupoevento, clasificación manual. Los valores posibles son (QA, PROD).
+ws.sisa.snvs.rest-client.config.trust-invalid-certificate=Define si valida certificado https.
+
+integration.covid.encryption.key=Clave para la encriptación de datos provistos por endpoints de SGH a otras aplicaciones (ej: covid).
+test.stress.disable.validation=Desactiva validaciones en el sistema para facilitar las pruebas.
+scheduledjobs.enabled=Des/habilitar la ejecución general de trabajos automáticos.
+scheduledjobs.federatepatients.enabled=Des/habilitar la federación de pacientes en estado validado.
+scheduledjobs.federatepatients.seconds=Configura los segundos del cron usado para la federación de pacientes.
+scheduledjobs.federatepatients.minutes=Configura los minutos del cron usado para la federación de pacientes.
+scheduledjobs.federatepatients.hours=Configura las horas del cron usado para la federación de pacientes.
+scheduledjobs.federatepatients.dayofmonth=Configura el dia del mes del cron usado para la federación de pacientes.
+scheduledjobs.federatepatients.month=Configura el mes del cron usado para la federación de pacientes.
+scheduledjobs.federatepatients.dayofweek=Configura el dia de la semana del cron usado para la federación de pacientes.
+
+scheduledjobs.updateethnicities.enabled=Des/habilitar la actualización de etnias desde el servicio de Snowstorm.
+scheduledjobs.updateethnicities.seconds=Configura los segundos del cron usado para la actualización de las etnias.
+scheduledjobs.updateethnicities.minutes=Configura los minutos del cron usado para la actualización de las etnias.
+scheduledjobs.updateethnicities.hours=Configura las horas del cron usado para la actualización de las etnias.
+scheduledjobs.updateethnicities.dayofmonth=Configura el dia del mes del cron usado para la actualización de las etnias.
+scheduledjobs.updateethnicities.month=Configura el mes del cron usado para la actualización de las etnias.
+scheduledjobs.updateethnicities.dayofweek=Configura el dia de la semana del cron usado para la actualización de las etnias.
+
+monitoring.rest-client.storage.enable=Activa el almacenamiento de la información medida cuando se realizan request a servicios externos.
+api-key.header=Define el nombre del header donde se espera recibir los api-key
+app.default.language=Define el idioma por defecto de la aplicación
+app.other.languages=Define los otros idiomas soportados por la aplicación
+app.gateway.cubejs.apiUrl=Define la url donde se encuentra el servidor de cubejs
+app.gateway.cubejs.charts.list=Define la lista de nombres de los gráficos soportados en cubejs
+hsi.extensions.rest.url=Define la url de donde se encuentran los endpoints de extensión definidos
+
+spring.datasource.url=Url de conexión a la base de datos junto con su puerto. Formato jdbc:postgresql://${DATABASE_IP_PORT:localhost:5432}/${DATABASE_SCHEMA:hospitalDB}.
+spring.datasource.username=Nombre de usuario utilizado para realizar la conexión a la base de datos.
+spring.datasource.password=Contraseña utilizada para realizar la conexión a la base de datos.
+spring.datasource.driver-class-name=Define el driver usado para la conexión de base datos.
+spring.datasource.hikari.connectionTimeout=Define el tiempo de timeout de la conexión en ms.
+spring.jpa.hibernate.ddl-auto=Determina el modo de validación de las entidades.
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation
+
+springdoc.paths-to-exclude=Define los endpoints que se van a excluir desde la web de swagger.
+springdoc.swagger-ui.operationsSorter=Define el tipo de ordenamiento que aplica la web de swagger sobre todos los endpoints.
+springdoc.swagger-ui.show-common-extensions=Controla la visualización de las extensiones (pattern, maxLength, minLength, maximum, minimum) y valores para los parámetros.
+springdoc.swagger-ui.show-extensions=Controla la visualización de campos y valores de extensión de proveedor (x-) para Operaciones, Parámetros y Esquema.
+springdoc.swagger-ui.tagsSorter=Define como ordenar los endpoints basados en sus tags.
+springdoc.use-fqn=Activa los nombres completos.
+spring.jackson.default-property-inclusion=Define sí incluye los atributos null en la desserialización de los datos.
+
+spring.main.allow-bean-definition-overriding=Habilita la sobreescritura de beans.
+spring.servlet.multipart.enabled=Habilita el manejo de múltiples archivos en los request
+#spring.servlet.multipart.file-size-threshold=
+spring.servlet.multipart.max-file-size=Define tamaño máximo por archivo
+spring.servlet.multipart.max-request-size=Define tamaño máximo del request
+#sun.management.compiler
