tg-6123. [MEJORA] Definición de rangos en los campos numéricos de formulario de Nueva consulta

--- a/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
@@ -68,6 +68,7 @@
 					"TENSION_SISTOLICA_OBLIGATORIO": "Tensión arterial sistólica obligatorio",
 					"TENSION_SISTOLICA_MIN": "Tensión arterial sistólica mínima debe ser 0 mmHg",
 					"TALLA_OBLIGATORIO": "Talla obligatorio",
+					"TALLA_NOT_INTEGER": "La talla debe ser un valor entero",
 					"TALLA_MIN": "La talla mínima debe ser 0 cm",
 					"TALLA_MAX": "La talla máxima debe ser 1000 cm",
 					"PESO_OBLIGATORIO": "Peso obligatorio",
@@ -76,6 +77,7 @@
 					"PROBLEMA_OBLIGATORIO": "Problema de consulta obligatorio",
 					"MAX_LENGTH_NOTA": "La nota de evolución debe tener como máximo 1024 caracteres",
 					"HEAD_CIRCUNFERENCE_RANGE": "Perímetro cefálico debe ser entre 1 y 100 cm",
+					"HEAD_CIRCUNFERENCE_NOT_INTEGER": "Perímetro cefálico debe ser un valor entero",
 					"BLOOD_GLUCOSE_RANGE": "Glucemia debe ser entre 1 y 500 (mg/dl)",
 					"GLYCOSYLATED_HEMOGLOBIN_RANGE": "Hemoglobina glicosilada debe ser entre 1 y 20 (%)",
 					"CARDIOVASCULAR_RISK_RANGE": "Riesgo cardiovascular debe ser entre 1 y 100 (%)",
