tg-6016 [FE] agregar entradas de calendario y hora

--- a/front-end/apps/projects/hospital/src/assets/i18n/internacion/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/internacion/es-AR.json
@@ -419,6 +419,14 @@
 			"MEDICAL_DISCHARGE": "Alta médica",
 			"DISCHARGE_DATE": "Fecha de egreso",
 			"DISCHARGE_TYPE": "Tipo de egreso",
+			"DATE": "Fecha",
+			"DATE_TIME": "Fecha y hora de ingreso",
+			"INVALID_TIME": "La hora debe ser posterior a la de creación del episodio",
+			"INVALID_DATE": "La fecha ingresada no es válida",
+			"MAX_TIME_ERROR": "La hora debe ser anterior a la hora actual",
+			"REQUIRED": "El campo es requerido",
+			"TIME_FORMAT": "La hora debe cumplir con el formato de 24 hs y tener dos dígitos para la hora y los minutos respectivamente",
+			"TIME": "Hora",
 			"messages": {
 				"ERROR": "No se pudo dar el alta administrativa del paciente",
 				"SUCCESS": "El alta administrativa se guardó exitosamente",
