tg-6182 [FE] Agregar boton para acceder a detalles del paciente desde HC

--- a/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
@@ -21,7 +21,8 @@
 			"TITLE": "Historia Clínica",
 			"card": {
 				"buttons": {
-					"NUEVA_CONSULTA": "Nueva consulta"
+					"NUEVA_CONSULTA": "Nueva consulta",
+					"SHOW_PATIENT": "ver paciente"
 				},
 				"GROUP_AND_FACTOR": "Grupo y factor",
 				"SANGUINEOUS": "sanguíneo",
