tg-6174 [FE] Agregar botón para acceder a HC desde el card detalles del paciente

--- a/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
@@ -460,7 +460,7 @@
 				}
 			},
 			"profile": {
-				"BUTTON_HISTORIA_CLINICA": "Historia Clínica",
+				"BUTTON_HISTORIA_CLINICA": "ver historia clínica",
 				"WARNING_INTERNADO": "El paciente se encuentra internado en otra institución."
 			},
 			"resumen": {
