tg-6202 [BE] Agregar dato prefijo en persona y turnos

--- a/back-end/hospital-api/src/main/resources/messages_es.properties
+++ b/back-end/hospital-api/src/main/resources/messages_es.properties
@@ -162,6 +162,7 @@ appointment.state.reason.invalid=Debe especificarse el motivo
 appointment.new.without.medical.coverage=Debe especificarse una cobertura médica 
 appointment.new.beforeToday=La fecha del turno no puede ser anterior al día de hoy
 appointment.new.phoneNumber.invalid=El número telefónico debe contener hasta 20 caracteres
+appointment.new.phonePrefix.invalid=El prefijo debe contener hasta 10 caracteres
 
 ####### Health Insurance #######
 health-insurance.not.found = La obra social no existe
