tg-6201 [FE] Separar caracteristica de numero telefonico en paciente

--- a/front-end/apps/projects/hospital/src/assets/i18n/pacientes/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/pacientes/es-AR.json
@@ -38,6 +38,7 @@
             "ONLY_NUMBERS": "Solo números",
             "OTHER_LAST_NAMES": "Otros apellidos",
             "PAMI_DOCTOR": "Médico de PAMI",
+			"PHONE_PREFIX": "Prefijo",
             "PHONE_NUMBER": "Teléfono",
             "RELIGION": "Religión",
             "REQUIRED": "El campo es requerido",
