tg-6187 [FE] Agrega el nuevo tab de Internación

--- a/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
@@ -481,6 +481,9 @@
                 "TAB_LABEL": "Indicaciones",
                 "TITLE": "Indicaciones"
             },
+            "internacion": {
+				"TAB_LABEL": "Internación"
+			},
             "vacunas": {
                 "TAB_LABEL": "Vacunas",
                 "TITLE": "Historial de vacunación",
