tg-6198 [FE] Agregar card con resumen de episodio de guardia

--- a/front-end/apps/projects/hospital/src/assets/i18n/pacientes/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/pacientes/es-AR.json
@@ -183,6 +183,12 @@
 			"ROL_COLUMN": "Rol",
 			"CLINIC_COLUMN": "Clínica",
 			"WITHOUT_ROLES": "Sin roles asignados."
+		},
+		"emergency_care_episode_sumamry": {
+			"TITLE": "Resumen de Guardia",
+			"buttons": {
+				"VIEW_EPISODE": "VER GUARDIA"
+			}
 		}
     }
 }
