--- a/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
@@ -32,7 +32,8 @@
                     "WITHOUT_COVERAGE": "Sin cobertura",
                     "NO_INFO": "Sin información"
                 },
-                "INTERNMENT_EPISODE_ACTIVE": "En internación"
+                "INTERNMENT_EPISODE_ACTIVE": "En internación",
+                "EMERGENCY_CARE_EPISODE_ACTIVE": "En guardia"
             },
             "new-nursing-consultation": {
                 "TITLE": "Nueva consulta de enfermería",
