tg-6303 [P1] No se visualiza correctamente el tag

--- a/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
@@ -31,7 +31,8 @@
                     "AFFILIATE_NUMBER": "Afiliado N°:",
                     "WITHOUT_COVERAGE": "Sin cobertura",
                     "NO_INFO": "Sin información"
-                }
+                },
+                "INTERNMENT_EPISODE_ACTIVE": "En internación"
             },
             "new-nursing-consultation": {
                 "TITLE": "Nueva consulta de enfermería",
