tg-6313 [FE] Mostrar alergias en header de paciente

--- a/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
@@ -33,7 +33,9 @@
                     "NO_INFO": "Sin información"
                 },
                 "INTERNMENT_EPISODE_ACTIVE": "En internación",
-                "EMERGENCY_CARE_EPISODE_ACTIVE": "En guardia"
+                "EMERGENCY_CARE_EPISODE_ACTIVE": "En guardia",
+				"NO_CRITICAL_ALLERGIES": "Sin alergias críticas registradas",
+                "MORE_CRITICAL_ALLERGIES": "+ {{allergies}} alergias críticas"
             },
             "new-nursing-consultation": {
                 "TITLE": "Nueva consulta de enfermería",
