tg-6363. [BE] Creación propiedad para actualización de propiedades y borrado de transacción al obtener assets

--- a/back-end/hospital-api/src/main/resources/messages_es.properties
+++ b/back-end/hospital-api/src/main/resources/messages_es.properties
@@ -337,3 +337,4 @@ spring.servlet.multipart.enabled=Habilita el manejo de múltiples archivos en lo
 spring.servlet.multipart.max-file-size=Define tamaño máximo por archivo
 spring.servlet.multipart.max-request-size=Define tamaño máximo del request
 #sun.management.compiler
+app.system.properties.cron.config=Define frecuencia de ejecución de la tarea que carga las propiedades del sistema configuradas
