--- a/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
@@ -473,6 +473,14 @@
                 "TAB_LABEL": "Resumen",
                 "TITLE": "Resumen de historia clínica"
             },
+			"studies": {
+                "TAB_LABEL": "Estudios",
+                "TITLE": "Estudios"
+            },
+			"indications": {
+                "TAB_LABEL": "Indicaciones",
+                "TITLE": "Indicaciones"
+            },
             "vacunas": {
                 "TAB_LABEL": "Vacunas",
                 "TITLE": "Historial de vacunación",
